fixed api, finally unified douter and fixed endpoint issues, added bunch of pages to frontend
